--- a/src/app/layout/paginasecundaria/paginasecundaria.component.html
+++ b/src/app/layout/paginasecundaria/paginasecundaria.component.html
@@ -3,12 +3,11 @@
   Esta plantilla define la estructura básica de la aplicación, incluyendo
   el encabezado, el contenido dinámico y el pie de página.
 -->
-<app-header></app-header>
+<app-header />
 
 <!--
 `router-outlet`: Directiva de Angular que actúa como un marcador de posición para
     el contenido dinámico cargado por el enrutador.
 -->
-<router-outlet></router-outlet>
-
-<app-footer></app-footer>
+<router-outlet />
+<app-footer />
