--- a/src/app/modules/usuarios/pages/agregar-usuarios/agregar-usuarios.component.html
+++ b/src/app/modules/usuarios/pages/agregar-usuarios/agregar-usuarios.component.html
@@ -1,1 +1,8 @@
-<p>agregar-usuarios works!</p>
+<h2>Agregar Usuario</h2>
+
+<div class="form-container">
+    <input type="text" placeholder="Nombre" [(ngModel)]="nombre">
+    <input type="email" placeholder="Correo" [(ngModel)]="email">
+    <input type="tel" placeholder="Teléfono" [(ngModel)]="telefono">
+    <button (click)="agregarUsuario()">Agregar Usuario</button>
+</div>
