--- a/src/app/modules/usuarios/pages/agregar-usuarios/agregar-usuarios.component.html
+++ b/src/app/modules/usuarios/pages/agregar-usuarios/agregar-usuarios.component.html
@@ -1,8 +1,7 @@
 <h2>Agregar Usuario</h2>
-
 <div class="form-container">
     <input type="text" placeholder="Nombre" [(ngModel)]="nombre">
     <input type="email" placeholder="Correo" [(ngModel)]="email">
-    <input type="tel" placeholder="Teléfono" [(ngModel)]="telefono">
+    <input type="tel" placeholder="Teléfono" [(ngModel)]="username">
     <button (click)="agregarUsuario()">Agregar Usuario</button>
 </div>
