--- a/src/app/modules/clientes/pages/listado-clientes/listado-clientes.component.html
+++ b/src/app/modules/clientes/pages/listado-clientes/listado-clientes.component.html
@@ -3,35 +3,36 @@
   Utiliza Angular Material para mejorar la apariencia y funcionalidad.
 -->
 <div class="clientes-container">
-    <h1>Lista de Clientes</h1>
-  
-    <!-- Tabla para mostrar los clientes -->
-    <table class="clientes-table">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Nombre</th>
-          <th>Apellido</th>
-          <th>Email</th>
-          <th>Teléfono</th>
-          <th>Dirección</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Itera sobre la lista de clientes y muestra cada uno en una fila -->
-        <tr *ngFor="let cliente of clientes">
-          <td>{{ cliente.id }}</td>
-          <td>{{ cliente.nombre }}</td>
-          <td>{{ cliente.apellido }}</td>
-          <td>{{ cliente.email }}</td>
-          <td>{{ cliente.telefono }}</td>
-          <td>{{ cliente.direccion }}</td>
-        </tr>
-      </tbody>
-    </table>
-  
-    <!-- Mensaje que se muestra si no hay clientes -->
-    <p *ngIf="clientes.length === 0" class="no-clientes">
-      No hay clientes registrados.
-    </p>
-  </div>
+  <h1>Lista de Clientes</h1>
+  <h3>{{ getGreeting() }}</h3>
+
+  <!-- Tabla para mostrar los clientes -->
+  <table class="clientes-table">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Nombre</th>
+        <th>Apellido</th>
+        <th>Email</th>
+        <th>Teléfono</th>
+        <th>Dirección</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Itera sobre la lista de clientes y muestra cada uno en una fila -->
+      <tr *ngFor="let cliente of clientes">
+        <td>{{ cliente.id }}</td>
+        <td>{{ cliente.nombre }}</td>
+        <td>{{ cliente.apellido }}</td>
+        <td>{{ cliente.email }}</td>
+        <td>{{ cliente.telefono }}</td>
+        <td>{{ cliente.direccion }}</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- Mensaje que se muestra si no hay clientes -->
+  <p *ngIf="clientes.length === 0" class="no-clientes">
+    No hay clientes registrados.
+  </p>
+</div>
