--- a/src/app/modules/usuarios/pages/listado-usuarios/listado-usuarios.component.css
+++ b/src/app/modules/usuarios/pages/listado-usuarios/listado-usuarios.component.css
@@ -12,7 +12,7 @@ header {
 
 .sidebar {
     width: 250px;
-    background: #343a40;
+    background: #007BFF;
     color: white;
     padding: 1rem;
     height: 100vh;
@@ -49,11 +49,12 @@ table {
     width: 100%;
     border-collapse: collapse;
     background: white;
+    font-size: 13px;
 }
 
 th,
 td {
-    padding: 12px;
+    padding: 5px 12px;
     border: 1px solid #ddd;
     text-align: left;
 }
@@ -61,10 +62,17 @@ td {
 th {
     background: #007BFF;
     color: white;
+    padding: 8px 12px;
+}
+
+.tc {
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
 }
 
 .btn {
-    padding: 5px 10px;
+    padding: 7px 15px;
     border: none;
     cursor: pointer;
     background: #28a745;
@@ -74,4 +82,5 @@ th {
 
 .btn.delete {
     background: #dc3545;
+    margin-left: 5px;
 }
